--- a/Website/index.html
+++ b/Website/index.html
@@ -5,10 +5,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        
+        *{
+            margin: 0px;
+            padding: 0px;
+        }
+        body{
+            height: 100vh;
+            width:100vw;
+            background-color: #f5f5f5;
+        }
     </style>
 </head>
 <body>
-   <h1>Prithiv</h1> 
+   <div class="hello">
+    <span class="mailtest">
+        <ul>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul>
+    </span>
+   </div>
 </body>
 </html>
