--- a/Website/index.html
+++ b/Website/index.html
@@ -3,31 +3,197 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Resume</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <style>
-        *{
+        * {
             margin: 0px;
             padding: 0px;
         }
-        body{
-            height: 100vh;
-            width:100vw;
+        body {
+            height:auto;
+            width:100%;
             background-color: #f5f5f5;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            display: flex;
+            flex-direction: column;
+            justify-content: start;
+            align-items: center;
+        }
+        .section1 {
+            width: 70%;
+            height: 12rem;
+            /* background-color: aquamarine; */
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            align-items: center;
+            background: #1D4350;
+            background: -webkit-linear-gradient(to right, #A43931, #1D4350); 
+            background: linear-gradient(to right, #A43931, #1D4350);
+            color: #f5f5f5;
+            -webkit-box-shadow: 8px 8px 24px 0px rgba(66, 68, 90, 1);
+            -moz-box-shadow: 8px 8px 24px 0px rgba(66, 68, 90, 1);
+            box-shadow: 8px 8px 24px 0px rgba(66, 68, 90, 1);
+        }
+        .profile-img-section {
+            width: 40%;
+            height: 100%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+        .profile-data {
+            width: 40%;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: flex-start;
+            
+        }
+        .profile-img {
+            height: 8rem;
+            width: 8rem;
+            border-radius: 50%;
+        }
+        .section2 {
+            width: 70%;
+            height: 12rem;
+            /* background-color: aquamarine; */
+            /* border: 1px solid aquamarine; */
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: start;
+            /* padding: 10px; */
+        }
+        .section3 {
+            width: 70%;
+            height: 20rem;
+            /* background-color: aquamarine; */
+            /* border: 1px solid aquamarine; */
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: start;
+            /* padding: 10px; */
+        }
+        .section4 {
+            width: 70%;
+            height: 15rem;
+            /* background-color: aquamarine; */
+            /* border: 1px solid aquamarine; */
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: start;
+            /* padding: 10px; */
+        }
+        .section-title {
+            /* height: 10%; */
+            color: #1D4350;
+            font-weight: bold;
+        }
+        .ed-table {
+            width: 100%;
+            border: 1px solid gray;
+            border-collapse: collapse;
+        }
+        th,
+        td {
+            padding: 1rem;
+            border: 1px solid gray;
+        }
+        .companies {
+            font-weight: bold;
+            color: aquamarine;
+        }
+        ul{
+            /* padding-left: 20px; */
+            list-style-type: none;
+        }
+        .section5{
+            display: flex;
+            background: #1D4350;
+            background: -webkit-linear-gradient(to right, #A43931, #1D4350); 
+            background: linear-gradient(to right, #A43931, #1D4350);
+            width: 70%;
+            height: 2rem;
+            color: #f5f5f5;
+            justify-content: center;
+            align-items: center;
+            flex-direction: row;
+            gap:2rem;
+        }
+        .section6{
+            height: 0.15rem;
+        }
+        .white{
+            color: #f5f5f5;
         }
     </style>
 </head>
 <body>
-   <div class="hello">
-    <span class="mailtest">
-        <ul>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-        </ul>
-    </span>
+   <div class="section1">
+    <div class="profile-img-section">
+        <img src="images/profilepic.jpg" alt="profile" class="profile-img">
+    </div>
+    <div class="profile-data">
+        <h1>PRITHIV</h1>
+        <h3>theprithivraj@gmail.com</h3>
+    </div>
+   </div>
+   <div class="section2">
+    <h1 class="section-title">OBJECTIVE</h1>
+    <p>I am a highly motivated and a dedicated person. I have many good qualities. I love experimenting many things.I am a highly motivated and a dedicated person. I have many good qualities. I love experimenting many things.</p>
+   </div>
+   <div class="section3">
+    <h1 class="section-title">EDUCATION</h1>
+    <table class="ed-table">
+        <tr>
+            <th>Degree</th>
+            <th>Campus</th>
+            <th>Score %</th>
+        </tr>
+        <tr>
+            <td>deg1</td>
+            <td>school1</td>
+            <td>50%</td>
+        </tr>
+        <tr>
+            <td>deg2</td>
+            <td>school2</td>
+            <td>50%</td>
+        </tr>
+        <tr>
+            <td>deg3</td>
+            <td>school3</td>
+            <td>50%</td>
+        </tr>
+    </table>
+   </div>
+   <div class="section4">
+    <h1 class="section-title">SKILLS</h1>
+    <ul>
+        <li>DJANGO</li>
+        <li>MACHINE LEARNING</li>
+        <li>PYTHON</li>
+        <li>REACT</li>
+        <li>UI/UX</li>
+    </ul>
+   </div>
+   <div class="section5">
+    <a href="mailto:theprithivraj@gmail.com">
+        <i class="fa fa-envelope white"></i>
+    </a>
+    <a href="tel:+911234567890">
+        <i class="fa fa-phone white"></i>
+    </a>
+    <a href="http://www.linkedin.com">
+        <i class="fa fa-linkedin-square white"></i>
+    </a>
+   </div>
+   <div class="section6">
    </div>
 </body>
 </html>
